# Ai-voice-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/services/: llm_service.py  session_store.py  tooling.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
