[project]
name = "voice-assistant-studio"
version = "0.1.0"
description = "Full-stack AI voice assistant built with FastAPI and a browser-based voice UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
